--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -1,4 +1,4 @@
-\begin{thebibliography}{0}
+  \begin{thebibliography}{0}
 
 % stosowanie_modelu.pdf
 \bibitem{kinematic_modeling}
@@ -99,5 +99,9 @@ Dokumentacja ODE z wyjaśnieniem działania kolizji. \\
 \bibitem{andymark}
 Strona internetowa producenta kół Mecanum, użytych w platformie. \\
 \url{http://www.andymark.com/8in-Mecanum-HD-Set-p/am-2118.htm}
+
+\bibitem{kuka}
+Strona internetowa robota Kuka YouBot. \\
+\url{http://www.youbot-store.com}
 
 \end{thebibliography}
